fwng: fixed alignment of right box

--- a/frugalware/fwng.css
+++ b/frugalware/fwng.css
@@ -101,7 +101,7 @@ div#columns div#rightcolumn {
 	width: 167px;
 	float: right;
 	position:absolute;
-	right:10px;
+	right:5px;
 }
 
 div#columns div#centercolumn {
